story #15455 feat: upgrade CAS 6 to 7